Use libtool to link Fuse and libuigtk, sorts out transitive dependencies when GTK+ (and probably libspectrum) is installed in a non-default directory. Fixes build of UNIX version on Mac OS X.
Legacy-ID: 2410

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,14 @@
 /Makefile.in
 /aclocal.m4
 /autom4te.cache
+/cscope.out
 /config.cache
 /config.h
 /config.h.in
 /config.log
 /config.status
 /configure
+/depcomp
 /fuse
 /install-sh
 /libtool
