--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,18 @@
 /autom4te.cache
 /cscope.out
 /config.cache
+/config.guess
 /config.h
 /config.h.in
 /config.log
 /config.status
+/config.sub
 /configure
 /depcomp
 /fuse
 /install-sh
 /libtool
+/ltmain.sh
 /missing
 /mkinstalldirs
 /settings.c
