Switch to using non-recursive makefile (patch #321) (thanks, Stuart)
Legacy-ID: 5302

--- a/z80/.gitignore
+++ b/z80/.gitignore
@@ -1,11 +1,9 @@
 /.deps
+/.dirstamp
 /.libs
-/Makefile
-/Makefile.in
 /coretest
 /coretest.exe
 /coretest.out
-/libz80.a
 /opcodes_base.c
 /tests.actual
 /z80_cb.c
