Distribute missing files in the tarball.
m4/ax_create_stdint_h.m4, lib/tests/success.d80.bz2 and z80/tests/README.

Legacy-ID: 5536

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -82,6 +82,7 @@ lib_uncompressed_snaps = \
 lib_tests = \
             lib/tests/fatware-success.hdf.bz2 \
             lib/tests/idedos-success.hdf.bz2 \
+            lib/tests/success.d80.bz2 \
             lib/tests/success.mdr \
             lib/tests/success.mgt.bz2 \
             lib/tests/success.opd \
