Fix VPATH builds without dependency tracking (patch #368).
Legacy-ID: 5588

--- a/ui/fb/Makefile.am
+++ b/ui/fb/Makefile.am
@@ -47,4 +47,5 @@ ui_fb_files = \
 ui_fb_built = ui/fb/keysyms.c
 
 ui/fb/keysyms.c: $(srcdir)/keysyms.pl $(srcdir)/keysyms.dat
+	@$(MKDIR_P) ui/fb
 	$(AM_V_GEN)$(PERL) -I$(srcdir)/perl $(srcdir)/keysyms.pl fb $(srcdir)/keysyms.dat > $@.tmp && mv $@.tmp $@
