--- a/ui/svga/Makefile.am
+++ b/ui/svga/Makefile.am
@@ -45,4 +45,5 @@ ui_svga_files = \
 ui_svga_built = ui/svga/keysyms.c
 
 ui/svga/keysyms.c: $(srcdir)/keysyms.pl $(srcdir)/keysyms.dat
+	@$(MKDIR_P) ui/svga
 	$(AM_V_GEN)$(PERL) -I$(srcdir)/perl $(srcdir)/keysyms.pl svga $(srcdir)/keysyms.dat > $@.tmp && mv $@.tmp $@
