Move debugger variable setup to separate file.
Legacy-ID: 5620

--- a/z80/Makefile.am
+++ b/z80/Makefile.am
@@ -24,6 +24,7 @@
 
 fuse_SOURCES += \
                 z80/z80.c \
+                z80/z80_debugger_variables.c \
                 z80/z80_ops.c
 
 BUILT_SOURCES += \
@@ -56,6 +57,7 @@ z80/z80_ed.c: $(srcdir)/z80/z80.pl $(srcdir)/z80/opcodes_ed.dat
 noinst_HEADERS += \
                   z80/z80.h \
                   z80/z80_checks.h \
+                  z80/z80_internals.h \
                   z80/z80_macros.h
 
 EXTRA_DIST += \
