Initial work on a startup manager to automatically handle dependency issues.
Legacy-ID: 5637

--- a/Makefile.am
+++ b/Makefile.am
@@ -170,6 +170,7 @@ include compat/Makefile.am
 include data/Makefile.am
 include debugger/Makefile.am
 include hacking/Makefile.am
+include infrastructure/Makefile.am
 include lib/Makefile.am
 include machines/Makefile.am
 include man/Makefile.am
