Add About Fuse dialog for widget UIs with less cluttered text.
Legacy-ID: 5771

--- a/ui/widget/Makefile.am
+++ b/ui/widget/Makefile.am
@@ -36,6 +36,7 @@ endif
 CLEANFILES += $(ui_widget_built)
 
 ui_widget_files = \
+                  ui/widget/about.c \
                   ui/widget/browse.c \
                   ui/widget/debugger.c \
                   ui/widget/error.c \
