Consolidate .gitignore files in top source directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
-/*.o
-/.deps
-/.gdb_history
-/.libs
-/Makefile
-/Makefile.in
 /aclocal.m4
 /autom4te.cache
-/cscope.out
 /compile
 /config.cache
 /config.guess
@@ -16,19 +9,76 @@
 /config.status
 /config.sub
 /configure
+/cscope.out
+/data/fuse.desktop
+/data/fuse.xml
+/data/shell-completion/bash.txt
+/data/shell-completion/man.txt
+/data/shell-completion/settings.txt
+/data/win32/fuse.manifest
+/data/win32/installer.nsi
+/debugger/commandl.c
+/debugger/commandy.c
+/debugger/commandy.h
 /depcomp
+.deps
+.dirstamp
 /fuse
 /fuse.dSYM
 /fuse.exe
+/.gdb_history
 /install-sh
+.libs
+/lib/*.szx
 /libtool
 /ltmain.sh
+/m4/libtool.m4
+/m4/lt~obsolete.m4
+/m4/ltoptions.m4
+/m4/ltsugar.m4
+/m4/ltversion.m4
+/Makefile
+/Makefile.in
 /missing
 /mkinstalldirs
+*.o
 /options.h
 /settings.c
 /settings.h
 /stamp-h
-/stamp-h.in
 /stamp-h1
+/stamp-h.in
+/ui/fb/keysyms.c
+/ui/gtk/keysyms.c
+/ui/gtk/menu_data.c
+/ui/gtk/menu_data.ui
+/ui/gtk/options.c
+/ui/gtk/options.h
+/ui/gtk/options_internals.h
+/ui/sdl/keysyms.c
+/ui/svga/keysyms.c
+/ui/widget/fuse.font
+/ui/widget/menu_data.c
+/ui/widget/options.c
+/ui/widget/options.h
+/ui/widget/options_internals.h
+/ui/wii/keysyms.c
+/ui/win32/keysyms.c
+/ui/win32/menu_data.c
+/ui/win32/menu_data.h
+/ui/win32/menu_data.rc
+/ui/win32/options.c
+/ui/win32/options_internals.h
+/ui/win32/options.rc
+/ui/xlib/keysyms.c
+/ui/xlib/xpixmaps.c
 /ylwrap
+/z80/coretest
+/z80/coretest.exe
+/z80/coretest.out
+/z80/opcodes_base.c
+/z80/tests.actual
+/z80/z80_cb.c
+/z80/z80_ddfd.c
+/z80/z80_ddfdcb.c
+/z80/z80_ed.c
