Distribute additional notices on Windows
The win32 build distributes third-party libraries that are not available
on the OS. Some notices and licenses need to be distributed as well to
comply with the terms.

--- a/data/win32/installer.nsi.in
+++ b/data/win32/installer.nsi.in
@@ -247,10 +247,13 @@ section "!Fuse Core Files (required)" SecCore
     File "COPYING.txt"
     File "fuse.exe"
     File "fuse.html"
+    File /nonfatal "LICENSES.txt"
     File /nonfatal "manual*.png"
     File "README.txt"
     File /nonfatal "README-win32.txt"
     File "*.dll"
+    SetOutPath $INSTDIR\3rd-party
+    File /nonfatal "3rd-party\*"
     SetOutPath $INSTDIR\lib
     File "lib\*"
     SetOutPath "$INSTDIR\roms"
