Ignore decompressed versions of our test files and the default names of ROMs that we don't supply.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@
 /install-sh
 .libs
 /lib/*.szx
+/lib/tests/fatware-success.hdf
+/lib/tests/idedos-success.hdf
+/lib/tests/success.d80
+/lib/tests/success.mgt
 /libtool
 /ltmain.sh
 /m4/libtool.m4
@@ -46,6 +50,18 @@
 /mkinstalldirs
 *.o
 /options.h
+/roms/128p-0.rom
+/roms/128p-1.rom
+/roms/256s-0.rom
+/roms/256s-1.rom
+/roms/256s-2.rom
+/roms/256s-3.rom
+/roms/didaktik80.rom
+/roms/gluck.rom
+/roms/if1-2.rom
+/roms/opus.rom
+/roms/trdos.rom
+/roms/usource.rom
 /settings.c
 /settings.h
 /stamp-h
