--- a/configure.ac
+++ b/configure.ac
@@ -42,7 +42,7 @@ AC_CANONICAL_HOST
 
 dnl Use automake to produce `Makefile.in'
 AM_INIT_AUTOMAKE([foreign subdir-objects -Wall])
-m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
 dnl Substitutions for .in files
 FUSE_FULL_VERSION=fuse_full_version
