Rename and distribute m4/ax_string_strcasecmp.m4

--- a/Makefile.am
+++ b/Makefile.am
@@ -133,6 +133,7 @@ EXTRA_DIST = AUTHORS \
 	     keysyms.pl \
 	     m4/ax_create_stdint_h.m4 \
 	     m4/ax_pthread.m4 \
+	     m4/ax_string_strcasecmp.m4 \
 	     m4/gtk-2.0.m4 \
 	     m4/pkg.m4 \
 	     m4/sdl.m4 \
